--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -334,7 +334,8 @@
             "Generation of work execution protocols": "Erstellung von Arbeitsausführungsprotokollen",
             "Documentation of the implementation of reports in the client's system": "Dokumentation der Bearbeitung von Meldungen im Kundensystem",
             "Electronic confirmations instead of paper documents": "Elektronische Bestätigungen anstelle von Papierdokumenten",
-            "Settlement of services using the application's price lists": "Abrechnung von Dienstleistungen unter Verwendung von App-Preislisten"
+            "Settlement of services using the application's price lists": "Abrechnung von Dienstleistungen unter Verwendung von App-Preislisten",
+            "Hidden simple location confirmation":"Versteckte einfache Standortbestätigung"
 
           
 
