--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -354,7 +354,8 @@
                 "Generation of work execution protocols": "Generowanie protokołów wykonania prac",
                 "Documentation of the implementation of reports in the client's system": "Dokumentacja realizacji zgłoszeń w systemie klienta",
                 "Electronic confirmations instead of paper documents": "Elektroniczne potwierdzenia zamiast papierowych dokumentów",
-                "Settlement of services using the application's price lists": "Rozliczenia usług z wykorzystaniem cenników aplikacji"
+                "Settlement of services using the application's price lists": "Rozliczenia usług z wykorzystaniem cenników aplikacji",
+                "Hidden simple location confirmation":"Ukryte proste potwierdzenie lokalizacji"
 
               
 
