--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -354,7 +354,8 @@
           "Generation of work execution protocols": "Generation of work execution protocols",
           "Documentation of the implementation of reports in the client's system": "Documentation of the implementation of reports in the client's system",
           "Electronic confirmations instead of paper documents": "Electronic confirmations instead of paper documents",
-          "Settlement of services using the application's price lists": "Settlement of services using the application's price lists"
+          "Settlement of services using the application's price lists": "Settlement of services using the application's price lists",
+          "Hidden simple location confirmation":"Hidden simple location confirmation"
     
         
 
