--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -355,7 +355,8 @@
                     "Generation of work execution protocols": "Генерація протоколів виконання робіт",
                     "Documentation of the implementation of reports in the client's system": "Документація реалізації заявок у системі клієнта",
                     "Electronic confirmations instead of paper documents": "Електронні підтвердження замість паперових документів",
-                    "Settlement of services using the application's price lists": "Розрахунки за послуги з використанням прайс-листів додатку"
+                    "Settlement of services using the application's price lists": "Розрахунки за послуги з використанням прайс-листів додатку",
+                    "Hidden simple location confirmation":"Приховане просте підтвердження місцезнаходження"
 
               
             
