--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -355,7 +355,7 @@
                 "Documentation of the implementation of reports in the client's system": "Dokumentacja realizacji zgłoszeń w systemie klienta",
                 "Electronic confirmations instead of paper documents": "Elektroniczne potwierdzenia zamiast papierowych dokumentów",
                 "Settlement of services using the application's price lists": "Rozliczenia usług z wykorzystaniem cenników aplikacji",
-                "Hidden simple location confirmation":"Ukryte proste potwierdzenie lokalizacji",
+                "Simple location confirmation":"Proste potwierdzenie lokalizacji",
                 "Copy to users":"Skopiuj do użytkowników"
 
               
