added what is a TaskVenue?

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -336,7 +336,8 @@
             "Electronic confirmations instead of paper documents": "Elektronische Bestätigungen anstelle von Papierdokumenten",
             "Settlement of services using the application's price lists": "Abrechnung von Dienstleistungen unter Verwendung von App-Preislisten",
             "Simple location confirmation":"Einfache Standortbestätigung",
-            "Copy to users":"Kopie an Benutzer"
+            "Copy to users":"Kopie an Benutzer",
+            "What is a TaskVenue?":"Was ist TaskVenue?"
 
           
 
