--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -356,7 +356,8 @@
           "Electronic confirmations instead of paper documents": "Electronic confirmations instead of paper documents",
           "Settlement of services using the application's price lists": "Settlement of services using the application's price lists",
           "Simple location confirmation":"Simple location confirmation",
-          "Copy to users":"Copy to users"
+          "Copy to users":"Copy to users",
+          "What is a TaskVenue?":"What is a TaskVenue?"
     
         
 
