--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -357,7 +357,8 @@
                     "Electronic confirmations instead of paper documents": "Електронні підтвердження замість паперових документів",
                     "Settlement of services using the application's price lists": "Розрахунки за послуги з використанням прайс-листів додатку",
                     "Simple location confirmation":"Просте підтвердження місцезнаходження",
-                    "Copy to users":"Скопіювати користувачам"
+                    "Copy to users":"Скопіювати користувачам",
+                    "What is a TaskVenue?":"Що таке TaskVenue?"
 
               
             
