--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -356,7 +356,8 @@
                 "Electronic confirmations instead of paper documents": "Elektroniczne potwierdzenia zamiast papierowych dokumentów",
                 "Settlement of services using the application's price lists": "Rozliczenia usług z wykorzystaniem cenników aplikacji",
                 "Simple location confirmation":"Proste potwierdzenie lokalizacji",
-                "Copy to users":"Skopiuj do użytkowników"
+                "Copy to users":"Skopiuj do użytkowników",
+                "What is a TaskVenue?":"Co to jest TaskVenue?"
 
               
 
